<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:gravity="center"
  tools:context=".MainActivity">
  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="24dp"
    android:id="@+id/question_text"
    android:text="@string/question_one"/>

   <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
     <Button
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/correct_button"
       android:id="@+id/correct_button"/>
     <Button
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/incorrect_button"
       android:id="@+id/incorrect_button"/>
   </LinearLayout>
  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/next_question"
      android:text="@string/next_question"/>
    <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/prev_question"
      android:id="@+id/prev_question"/>
  </LinearLayout>
<Button
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:id="@+id/cheat_button"
  android:text="@string/cheat_button"/>
</LinearLayout>